--- a/qmp6988/mtk/ap/v1.2/kernel-4.4/k71v1_64_bsp_pre_debug_defconfig
+++ b/qmp6988/mtk/ap/v1.2/kernel-4.4/k71v1_64_bsp_pre_debug_defconfig
@@ -1,33 +1,19 @@
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
-CONFIG_AUDIT=y
-CONFIG_NO_HZ=y
-CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SCHED_WALT=y
-CONFIG_TASKSTATS=y
-CONFIG_TASK_XACCT=y
-CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=19
-CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
-CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
-CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
-CONFIG_CGROUP_SCHED=y
-CONFIG_RT_GROUP_SCHED=y
 CONFIG_SCHED_TUNE=y
-CONFIG_BLK_DEV_INITRD=y
+# CONFIG_RD_BZIP2 is not set
+# CONFIG_RD_LZMA is not set
+# CONFIG_RD_XZ is not set
+# CONFIG_RD_LZO is not set
+# CONFIG_RD_LZ4 is not set
 CONFIG_SYSCTL_SYSCALL=y
-CONFIG_EMBEDDED=y
-CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_MACH_MT6771=y
@@ -35,12 +21,8 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
 # CONFIG_BOUNCE is not set
+CONFIG_CMA_AREAS=1
 CONFIG_ZSMALLOC=y
-CONFIG_SECCOMP=y
-CONFIG_ARMV8_DEPRECATED=y
-CONFIG_SWP_EMULATION=y
-CONFIG_CP15_BARRIER_EMULATION=y
-CONFIG_SETEND_EMULATION=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
 # CONFIG_EFI is not set
@@ -50,7 +32,6 @@ CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/k71v1_64_bsp_pre"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_PM_AUTOSLEEP=y
-CONFIG_PM_WAKELOCKS=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
@@ -59,15 +40,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_NET=y
-CONFIG_PACKET=y
-CONFIG_UNIX=y
 CONFIG_XFRM_MIGRATE=y
-CONFIG_NET_KEY=y
-CONFIG_INET=y
-CONFIG_IP_MULTICAST=y
-CONFIG_IP_ADVANCED_ROUTER=y
-CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_IP_PNP_BOOTP=y
@@ -78,120 +51,33 @@ CONFIG_IP_PIMSM_V1=y
 CONFIG_IP_PIMSM_V2=y
 CONFIG_SYN_COOKIES=y
 CONFIG_INET_AH=y
-CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 # CONFIG_INET_LRO is not set
-CONFIG_INET_DIAG_DESTROY=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_ROUTE_INFO=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y
 CONFIG_INET6_AH=y
-CONFIG_INET6_ESP=y
-CONFIG_INET6_IPCOMP=y
-CONFIG_IPV6_MIP6=y
 CONFIG_INET6_XFRM_MODE_ROUTEOPTIMIZATION=y
 CONFIG_IPV6_SIT_6RD=y
-CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 CONFIG_IPV6_MROUTE=y
 CONFIG_IPV6_PIMSM_V2=y
-CONFIG_NETFILTER=y
 CONFIG_BRIDGE_NETFILTER=y
-CONFIG_NF_CONNTRACK=y
-CONFIG_NF_CONNTRACK_SECMARK=y
-CONFIG_NF_CONNTRACK_EVENTS=y
-CONFIG_NF_CT_PROTO_DCCP=y
-CONFIG_NF_CT_PROTO_SCTP=y
-CONFIG_NF_CT_PROTO_UDPLITE=y
-CONFIG_NF_CONNTRACK_AMANDA=y
-CONFIG_NF_CONNTRACK_FTP=y
-CONFIG_NF_CONNTRACK_H323=y
-CONFIG_NF_CONNTRACK_IRC=y
-CONFIG_NF_CONNTRACK_NETBIOS_NS=y
-CONFIG_NF_CONNTRACK_PPTP=y
-CONFIG_NF_CONNTRACK_SANE=y
-CONFIG_NF_CONNTRACK_TFTP=y
-CONFIG_NF_CT_NETLINK=y
-CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
-CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
-CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
-CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
-CONFIG_NETFILTER_XT_TARGET_MARK=y
-CONFIG_NETFILTER_XT_TARGET_NFLOG=y
-CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
-CONFIG_NETFILTER_XT_TARGET_TPROXY=y
-CONFIG_NETFILTER_XT_TARGET_TRACE=y
-CONFIG_NETFILTER_XT_TARGET_SECMARK=y
-CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
-CONFIG_NETFILTER_XT_MATCH_COMMENT=y
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
-CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
-CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
-CONFIG_NETFILTER_XT_MATCH_HELPER=y
-CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
-CONFIG_NETFILTER_XT_MATCH_LENGTH=y
-CONFIG_NETFILTER_XT_MATCH_LIMIT=y
-CONFIG_NETFILTER_XT_MATCH_MAC=y
-CONFIG_NETFILTER_XT_MATCH_MARK=y
 CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
-CONFIG_NETFILTER_XT_MATCH_POLICY=y
 CONFIG_NETFILTER_XT_MATCH_PHYSDEV=y
-CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
-CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
-CONFIG_NETFILTER_XT_MATCH_QUOTA=y
-CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
 CONFIG_NETFILTER_XT_MATCH_REALM=y
 CONFIG_NETFILTER_XT_MATCH_RECENT=y
-CONFIG_NETFILTER_XT_MATCH_SOCKET=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y
-CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
-CONFIG_NETFILTER_XT_MATCH_STRING=y
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
-CONFIG_NETFILTER_XT_MATCH_TIME=y
-CONFIG_NETFILTER_XT_MATCH_U32=y
-CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
-CONFIG_IP_NF_MATCH_ECN=y
-CONFIG_IP_NF_MATCH_TTL=y
-CONFIG_IP_NF_FILTER=y
-CONFIG_IP_NF_TARGET_REJECT=y
-CONFIG_IP_NF_NAT=y
-CONFIG_IP_NF_TARGET_MASQUERADE=y
-CONFIG_IP_NF_TARGET_NETMAP=y
-CONFIG_IP_NF_TARGET_REDIRECT=y
-CONFIG_IP_NF_MANGLE=y
-CONFIG_IP_NF_RAW=y
-CONFIG_IP_NF_SECURITY=y
-CONFIG_IP_NF_ARPTABLES=y
-CONFIG_IP_NF_ARPFILTER=y
-CONFIG_IP_NF_ARP_MANGLE=y
-CONFIG_NF_CONNTRACK_IPV6=y
-CONFIG_IP6_NF_IPTABLES=y
 CONFIG_IP6_NF_MATCH_FRAG=y
 CONFIG_IP6_NF_MATCH_IPV6HEADER=y
-CONFIG_IP6_NF_MATCH_RPFILTER=y
 CONFIG_IP6_NF_TARGET_HL=y
-CONFIG_IP6_NF_FILTER=y
-CONFIG_IP6_NF_TARGET_REJECT=y
-CONFIG_IP6_NF_MANGLE=y
-CONFIG_IP6_NF_RAW=y
 CONFIG_BRIDGE=y
 CONFIG_VLAN_8021Q=y
-CONFIG_NET_SCHED=y
-CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_INGRESS=y
 CONFIG_NET_CLS_FW=y
-CONFIG_NET_CLS_U32=y
 CONFIG_CLS_U32_PERF=y
 CONFIG_CLS_U32_MARK=y
 CONFIG_NET_CLS_FLOW=y
-CONFIG_NET_EMATCH=y
-CONFIG_NET_EMATCH_U32=y
-CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_NET_ACT_MIRRED=y
 CONFIG_NET_ACT_IPT=y
@@ -203,13 +89,9 @@ CONFIG_CFG80211_DEVELOPER_WARNINGS=y
 CONFIG_CFG80211_DEBUGFS=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_MTK_NET_LOGGING=y
-CONFIG_MTD=y
-CONFIG_MTD_BLOCK=y
-CONFIG_MTD_NAND_IDS=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_UID_SYS_STATS=y
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6771"
 CONFIG_ARCH_MTK_PROJECT="k71v1_64_bsp_pre"
@@ -255,7 +137,7 @@ CONFIG_MTK_FLASHLIGHT_DLPT=y
 CONFIG_RT_FLASHLIGHT=y
 CONFIG_MTK_CCU=y
 CONFIG_MTK_GPU_SUPPORT=y
-CONFIG_MTK_GPU_VERSION="mali bifrost r9p0"
+CONFIG_MTK_GPU_VERSION="mali bifrost r14p0"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_JPEG=y
@@ -272,17 +154,13 @@ CONFIG_MTK_DYNAMIC_FPS_FRAMEWORK_SUPPORT=y
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSORS_1_0=y
 CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
-CONFIG_MTK_ACCELHUB=n
-CONFIG_MTK_FIS210X_ACC=y
-CONFIG_MTK_QMAX981=y
+CONFIG_MTK_ACCELHUB=y
 CONFIG_CUSTOM_KERNEL_ALSPS=y
 CONFIG_MTK_ALSPSHUB=y
 CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
-CONFIG_MTK_GYROHUB=n
-CONFIG_MTK_FIS210X_GYRO=y
+CONFIG_MTK_GYROHUB=y
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
-CONFIG_MTK_MAGHUB=n
-CONFIG_MTK_QMCX983=y
+CONFIG_MTK_MAGHUB=y
 CONFIG_MTK_HWMON=y
 CONFIG_CUSTOM_KERNEL_BAROMETER=y
 CONFIG_MTK_BAROHUB=n
@@ -293,18 +171,20 @@ CONFIG_CUSTOM_KERNEL_GMRV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_RV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_LINEARACCEL_SENSOR=y
 CONFIG_CUSTOM_KERNEL_GRAVITY_SENSOR=y
+CONFIG_CUSTOM_KERNEL_UNCALI_ACC_SENSOR=y
 CONFIG_CUSTOM_KERNEL_UNCALI_GYRO_SENSOR=y
 CONFIG_CUSTOM_KERNEL_UNCALI_MAG_SENSOR=y
 CONFIG_MTK_UNCALI_MAGHUB=y
-CONFIG_MTK_UNCALI_GYROHUB=n
+CONFIG_MTK_UNCALI_GYROHUB=y
 CONFIG_MTK_GAMEROTVECHUB=y
 CONFIG_MTK_ROTATVECHUB=y
 CONFIG_MTK_GMAGROTVECHUB=y
 CONFIG_MTK_GRAVITYHUB=y
 CONFIG_MTK_LINEARACCHUB=y
 CONFIG_MTK_ORIENTHUB=y
+CONFIG_MTK_UNCALI_ACCHUB=y
 CONFIG_CUSTOM_KERNEL_STEP_COUNTER=y
-CONFIG_MTK_STEPSIGNHUB=n
+CONFIG_MTK_STEPSIGNHUB=y
 CONFIG_CUSTOM_KERNEL_SITUATION=y
 CONFIG_MTK_STATHUB=y
 CONFIG_MTK_INPKHUB=y
@@ -377,6 +257,7 @@ CONFIG_MTK_SCHED_MONITOR=y
 CONFIG_PREEMPT_MONITOR=y
 CONFIG_MTK_WQ_DEBUG=y
 CONFIG_MTK_RCU_MONITOR=y
+CONFIG_MTK_CPU_CTRL_CFP=y
 CONFIG_MTK_RAM_CONSOLE=y
 CONFIG_MTK_RAM_CONSOLE_USING_SRAM=y
 CONFIG_MTK_RAM_CONSOLE_SIZE=0x800
@@ -403,10 +284,11 @@ CONFIG_HMP_TRACER=y
 CONFIG_SCHED_HMP_PLUS=y
 CONFIG_MTK_SCHED_BOOST=y
 CONFIG_MTK_SYSENV=y
-CONFIG_MTK_VOW_SUPPORT=y
 CONFIG_MTK_ACAO_SUPPORT=y
 CONFIG_MTK_TIMER_TIMESYNC=y
 CONFIG_MTK_IO_BOOST=y
+CONFIG_ANDROID_DEFAULT_SETTING=y
+CONFIG_MTK_FD_LEAK_DETECT=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_SCSI_SCAN_ASYNC=y
@@ -416,22 +298,13 @@ CONFIG_BLK_DEV_DM=y
 CONFIG_DM_DEBUG=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_UEVENT=y
-CONFIG_DM_VERITY=y
 CONFIG_DM_VERITY_FEC=y
 CONFIG_MTK_HW_FDE=y
-CONFIG_NETDEVICES=y
 CONFIG_IFB=y
-CONFIG_TUN=y
 # CONFIG_ETHERNET is not set
-CONFIG_PPP=y
-CONFIG_PPP_BSDCOMP=y
-CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_FILTER=y
-CONFIG_PPP_MPPE=y
 CONFIG_PPP_MULTILINK=y
 CONFIG_PPPOE=y
-CONFIG_PPPOLAC=y
-CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 # CONFIG_INPUT_MOUSEDEV is not set
@@ -461,6 +334,11 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_LEGACY_PTY_COUNT=16
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_SERIAL_8250=y
+CONFIG_SERIAL_8250_CONSOLE=y
+CONFIG_SERIAL_8250_NR_UARTS=3
+CONFIG_SERIAL_8250_RUNTIME_UARTS=3
+CONFIG_SERIAL_8250_MT6577=y
 # CONFIG_HW_RANDOM is not set
 CONFIG_SPI=y
 CONFIG_SPI_MT65XX=y
@@ -548,20 +426,14 @@ CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_TRANCEVIBRATOR=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_DUAL_ROLE_USB_INTF=y
-CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_SERIAL=y
 CONFIG_USB_CONFIGFS_ACM=y
 CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
-CONFIG_USB_CONFIGFS_F_FS=y
 CONFIG_USB_CONFIGFS_F_MTP=y
 CONFIG_USB_CONFIGFS_F_PTP=y
-CONFIG_USB_CONFIGFS_F_ACC=y
-CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
-CONFIG_USB_CONFIGFS_UEVENT=y
-CONFIG_USB_CONFIGFS_F_MIDI=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
@@ -575,13 +447,11 @@ CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_SWITCH=y
-CONFIG_RTC_CLASS=y
 # CONFIG_RTC_SYSTOHC is not set
-CONFIG_STAGING=y
-CONFIG_ASHMEM=y
+CONFIG_DMADEVICES=y
+CONFIG_DMA_MTK_UART=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
-CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
@@ -592,10 +462,9 @@ CONFIG_ARM64_ERRATUM_858921=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_MTK_QOS_SUPPORT=y
 CONFIG_IIO=y
-CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_EXT4_ENCRYPTION=y
 CONFIG_EXT4_DEBUG=y
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
@@ -625,15 +494,16 @@ CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
-CONFIG_FRAME_WARN=1400
+CONFIG_FRAME_WARN=2800
 CONFIG_PAGE_OWNER=y
 CONFIG_PAGE_OWNER_SLIM=y
 CONFIG_DEBUG_SECTION_MISMATCH=y
+CONFIG_DEBUG_PAGEALLOC=y
 CONFIG_DEBUG_OBJECTS=y
 CONFIG_DEBUG_OBJECTS_TIMERS=y
 CONFIG_SLUB_DEBUG_ON=y
 CONFIG_DEBUG_KMEMLEAK=y
-CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=3200
+CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=3600
 CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=5
@@ -652,12 +522,6 @@ CONFIG_MTK_FTRACE_DEFAULT_ENABLE=y
 CONFIG_DMA_API_DEBUG=y
 CONFIG_KGDB=y
 CONFIG_KGDB_KDB=y
-CONFIG_DEBUG_RODATA=y
-CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
-CONFIG_SECURITY=y
-CONFIG_SECURITY_NETWORK=y
-CONFIG_HARDENED_USERCOPY=y
-CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
